force-app/main/default/objects/User_Visitor_Tracking__c/User_Visitor_Tracking__c.object-meta.xml
<CustomObject>
    <description>Any visiter details analysis report here</description>
    <label>User Visitor Tracking</label>
    <nameField>
        <displayFormat>UVT-{0000}</displayFormat>
        <label>User Visit Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Visitor Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>