force-app/main/default/objects/User_Visitor_Tracking__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>