force-app/main/default/objects/User_Visitor_Tracking__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>