force-app/main/default/objects/User_Visitor_Tracking__c/fields/Ip_Address__c.field-meta.xml
<CustomField>
    <fullName>Ip_Address__c</fullName>
    <description>I will store the ip or else latest UVT IP-AutoNumber</description>
    <label>Ip Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>