force-app/main/default/objects/User_Visitor_Tracking__c/fields/Navigation__c.field-meta.xml
<CustomField>
    <fullName>Navigation__c</fullName>
    <label>Navigation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>